# taurimedrec

./: .gitignore  README.md  create-demo-logs.js  eslint.config.js  generateMockPatients.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: README.md  build-linux.yml  build-mobile-ubuntu.yml  build-windows.yml  ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  patients.db  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: lib.rs  main.rs
src/components/Layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/contexts/: SidebarContext.tsx  SidebarContextProvider.tsx
src/hooks/: useSidebar.ts
src/pages/: AddPatient.tsx  AddTreatment.tsx  AppointmentDetails.tsx  Appointments.tsx  Appointments.tsx.backup  Dashboard.tsx  EditPatient.tsx  EditTreatment.tsx  InvoiceDetails.tsx  Invoices.tsx  NewAppointment.tsx  PatientDetails.tsx  PatientList.tsx  Reports.tsx  Settings.tsx  Treatments.tsx
src/pages/settings/: ActivityLogsSettings.tsx  BackupRestoreSettings.tsx  CustomExaminationsSettings.tsx  OperatorSettings.tsx  ReceiptSettings.tsx  TreatmentSettings.tsx
src/services/: database.ts  databaseMock.ts  logService.ts
src/types/: index.ts  tauri.d.ts
src/utils/: sampleLogs.ts  tauriUtils.ts
