[package]
name = "patient-management-app"
version = "0.1.0"
description = "A Tauri App for patient management"
authors = ["you"]
edition = "2021"

[[bin]]
name = "patient-management-app"
path = "src/main.rs"


[lib]
name = "patient_management_app_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
tauri = { version = "2.0", features = ["rustls-tls"] }
# tauri-plugin-path = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
tauri = { version = "2.0", features = ["rustls-tls", "webkit2gtk"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[package.metadata.bundle]
targets = ["windows", "x86_64-pc-windows-msvc", "linux", "x86_64-unknown-linux-gnu", "android", "aarch64-linux-android", "armv7-linux-androideabi", "i686-linux-android", "x86_64-linux-android"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
